fix: prevent x-overflow on thin devices (>350px)

--- a/themes/hugo-theme-codex/assets/scss/pages/post.scss
+++ b/themes/hugo-theme-codex/assets/scss/pages/post.scss
@@ -226,7 +226,6 @@ $tocBreakpoint: 1024px;
 
 footer {
   text-align: center;
-  padding: 0 1.5rem;
 
   p {
     margin-top: 1rem; // reduce margin top due to social icons' padding
