--- a/themes/hugo-theme-codex/assets/scss/partials/_comments.scss
+++ b/themes/hugo-theme-codex/assets/scss/partials/_comments.scss
@@ -8,6 +8,7 @@
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
   font-size: smaller;
+  overflow-wrap: break-word;
 }
 
 .comment {
